--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <!-- Preview -->
     <div class="container">
       <div class="img-container">
-        <img class="desktop" src="/images/image-product-desktop.jpg" alt="">
-        <img class="mobile" src="/images/image-product-mobile.jpg" alt="">
+        <img class="desktop" src="./images/image-product-desktop.jpg" alt="">
+        <img class="mobile" src="./images/image-product-mobile.jpg" alt="">
       </div>
       <div class="info-container">
         <small>PERFUME</small>
